# FastPIgDogEgg

./: CMakeLists.txt  README.md
cmake/: compiler_option.cmake
include/: common.h  fpde.h
src/: CMakeLists.txt
src/neon/: mini_matrix_mul.cc
test/: CMakeLists.txt
test/neon_test/: fpde_mini_matrix_mul_test.cc
tools/: build_arm64.sh  build_arm_host.sh  build_armv7.sh
